--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,7 @@
 {
-  "name": "prakterakhir",
-  "integrations": {},
-  "type": "angular"
+  "name": "ionic",
+  "integrations": {
+    "capacitor": {}
+  },
+  "type": "angular-standalone"
 }
